--- a/templates/input.html
+++ b/templates/input.html
@@ -11,7 +11,7 @@
 <center>
     <font face = "Verdana" size = "5">
     <center style="color:white"><div style="background-color:#BFF068 ">
-        <form action="http://localhost:5000" method="post">
+        <form method="post">
             <h2>Advertising</h2>
             <h3>newspaper</h3><input id="first" name="newspaper" required="required">
             <h3>radio</h3><br><input id="second" name="radio" required="required">
